--- a/IDE/Object_Editor/vdom.mxml
+++ b/IDE/Object_Editor/vdom.mxml
@@ -165,8 +165,10 @@
 				<mx:HBox width="100%" height="100%">
 				
 					<mx:VBox width="200" height="100%">
-						<mx:List id="objList" width="100%" height="100%" labelField="@label" dataProvider="{attributesCollection}"/>
-						<mx:Button label="{langData.language.(@id == langStr).sentence.(@label == 'addnewattr')}" width="100%"/>
+						<mx:List id="attrList" width="100%" height="100%" labelField="@label"
+							dataProvider="{attributesCollection}" change="{attrFieldsRefresh();}"/>
+							
+						<mx:Button label="{langData.language.(@id == langStr).sentence.(@label == 'addnewattr')}" width="100%" click="{addNewAttribute();}"/>
 						<mx:Button label="{langData.language.(@id == langStr).sentence.(@label == 'rmattr')}" width="100%"/>
 					</mx:VBox>
 					
@@ -175,7 +177,7 @@
 						
 						<mx:HBox width="100%" id="hbox2">
 							<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'name')}" width="{ident_2}"/>
-							<mx:TextArea height="20" width="100%" cornerRadius="3"/>
+							<mx:TextArea id="attrName" height="20" width="100%" cornerRadius="3"/>
 						</mx:HBox>
 						
 						<mx:HBox width="100%" verticalAlign="bottom">
@@ -190,7 +192,7 @@
 						<mx:HBox width="100%">
 							<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'defval')}" width="{ident_2}"
 								toolTip="Value witch is set to when the object is created"/>
-							<mx:TextArea height="20" width="100%" cornerRadius="3"/>							
+							<mx:TextArea id="defValue" height="20" width="100%" cornerRadius="3"/>
 						</mx:HBox>
 						
 						<mx:HBox width="100%">
@@ -250,7 +252,7 @@
 								</mx:Canvas>
 							</mx:TabNavigator>
 						</mx:HBox>
-						
+						<mx:Button label="{langData.language.(@id == langStr).sentence.(@label == 'apply')}" click="{attrFieldsApply();}"/>
 					</mx:Panel>
 				</mx:HBox>
             </mx:Canvas>
