--- a/IDE/Object_Editor/vdom.mxml
+++ b/IDE/Object_Editor/vdom.mxml
@@ -172,12 +172,13 @@
 						<mx:Button label="{langData.language.(@id == langStr).sentence.(@label == 'rmattr')}" width="100%" click="{removeAttributeAlert()}"/>
 					</mx:VBox>
 					
-					<mx:Panel title="{langData.language.(@id == langStr).sentence.(@label == 'attrprop')}" width="100%" height="100%" dropShadowEnabled="false"
-						alpha="1.0" borderStyle="solid" borderThickness="1" borderColor="#c0c0c0" id="panel1">
+					<mx:Panel title="{langData.language.(@id == langStr).sentence.(@label == 'attrprop')}" width="100%" height="100%"
+						dropShadowEnabled="false" alpha="1.0" borderStyle="solid" borderThickness="1" borderColor="#c0c0c0" id="panel1"
+						creationComplete="{panel1.visible = false;}">
 						
 						<mx:HBox width="100%" id="hbox2">
 							<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'name')}" width="{ident_2}"/>
-							<mx:TextArea id="attrName" height="20" width="100%" cornerRadius="3" change="{checkAttrSelection()}"/>
+							<mx:TextArea id="attrName" height="20" width="100%" cornerRadius="3" change="{attrFieldsWrite();}"/>
 						</mx:HBox>
 						
 						<mx:HBox width="100%" verticalAlign="bottom">
@@ -204,10 +205,12 @@
 						
 						<mx:HBox width="100%" verticalAlign="bottom">
 							<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'errvldmess')}" width="{ident_2}"/>
-							<mx:TabNavigator width="100%" tabHeight="16" borderStyle="none" paddingTop="1">
+							<mx:TabNavigator id="errmsgTabs" width="100%" tabHeight="16" borderStyle="none" paddingTop="1">
+								<!--
 								<mx:Canvas label="EN" width="100%" height="100%">
 									<mx:TextArea width="100%" height="20"/>
 								</mx:Canvas>
+								-->
 							</mx:TabNavigator>						
 						</mx:HBox>
 						
@@ -245,16 +248,15 @@
 						
 						<mx:HBox id="hbox1" width="100%" verticalAlign="middle">
 							<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'descript')}" width="{ident_2}"/>
-							<mx:TabNavigator width="100%" tabHeight="16" borderStyle="none" paddingTop="1">
+							<mx:TabNavigator id="descriptTabs" width="100%" tabHeight="16" borderStyle="none" paddingTop="1">
+								<!--
 								<mx:Canvas label="EN" width="100%" height="100%">
 								<mx:TextArea width="100%" height="60"/>	
 								</mx:Canvas>
-								<mx:Canvas label="RU" width="100%" height="100%">
-								<mx:TextArea width="100%" height="60"/>	
-								</mx:Canvas>
+								-->
 							</mx:TabNavigator>
 						</mx:HBox>
-						<mx:Button label="{langData.language.(@id == langStr).sentence.(@label == 'restore')}" click="{addDnameLangs();}"/>
+						<mx:Button label="{langData.language.(@id == langStr).sentence.(@label == 'restore')}" click="{addAttrLangsTabs();}"/>
 					</mx:Panel>
 				</mx:HBox>
             </mx:Canvas>
