adding VDOM_session_protector
git-svn-id: http://svn.vdombox.ru/flextools/trunk@358 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/LoadObjects/LoadObjects.mxml
+++ b/IDE/LoadObjects/LoadObjects.mxml
@@ -16,7 +16,7 @@
 		}
 		private function close_session():void{
 			Alert.show("Закрываем сессию");
-			mySOAP.close_session();
+			mySOAP.closeSession();
 		}
 		private function create_application():void{
 			Alert.show("Привет!");
