git-svn-id: http://svn.vdombox.ru/flextools/trunk@363 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/LoadObjects/LoadObjects.mxml
+++ b/IDE/LoadObjects/LoadObjects.mxml
@@ -15,20 +15,24 @@
 			mySOAP.login('login Name', '777');
 		}
 		private function close_session():void{
-			Alert.show("Закрываем сессию");
+			//Alert.show("Закрываем сессию");
 			mySOAP.closeSession();
 		}
 		private function create_application():void{
-			Alert.show("Привет!");
+			mySOAP.createApplication();
+//			Alert.show("Привет!");
 		}
 		private function set_application():void{
-			Alert.show("Привет!");
+			mySOAP.setApplicationInfo();
+//			Alert.show("Привет!");
 		}
 		private function all_applications():void{
-			Alert.show("Привет!");
+			mySOAP.getType()
+//			Alert.show("Привет!");
 		}
 		private function all_types():void{
-			Alert.show("Привет!");
+			mySOAP.getTypeResource();
+//			Alert.show("Привет!");
 		}
 			
 		]]>
