repair VDOM_session_protector class; in Soap.as append getApplicationResource function
git-svn-id: http://svn.vdombox.ru/flextools/trunk@368 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/LoadObjects/LoadObjects.mxml
+++ b/IDE/LoadObjects/LoadObjects.mxml
@@ -31,7 +31,7 @@
 //			Alert.show("Привет!");
 		}
 		private function all_types():void{
-			mySOAP.getTypeResource();
+			mySOAP.getApplicationResource();
 //			Alert.show("Привет!");
 		}
 			
