--- a/IDE/Object_Editor/vdom.mxml
+++ b/IDE/Object_Editor/vdom.mxml
@@ -3,8 +3,9 @@
 	Development by Vadim A. Usoltsev, SE Group Ltd., Tomsk, Russia, 2007.
 -->
 
-<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" creationComplete="{start();}" currentState="start">
-	<mx:XML id="langData" source="langs/languages.xml" />
+<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" creationComplete="{start();}">
+	<mx:XML id="langData" source="langs/translation.xml" />
+	<mx:XML id="langsSource" source="langs/languages.xml" />
 	<mx:Script source="main.as" />
 	
 	<mx:states>
@@ -19,28 +20,35 @@
 				</mx:HBox>
 			</mx:AddChild>
 		</mx:State>
-		<mx:State name="start">
-			<mx:RemoveChild target="{tabnavigator1}"/>
-			<mx:AddChild relativeTo="{hint}" position="before">
-				<mx:Spacer height="100%"/>
-			</mx:AddChild>
-		</mx:State>
-		<mx:State name="langSelect">
-			<mx:RemoveChild target="{tabnavigator1}"/>
-			<mx:AddChild relativeTo="{hint}" position="before">
-				<mx:Spacer height="30%"/>
-			</mx:AddChild>
-			<mx:AddChild relativeTo="{spacer1}" position="before">
-				<mx:Panel width="250" height="200" layout="absolute" horizontalAlign="center">
-				</mx:Panel>
-			</mx:AddChild>
-			<mx:AddChild relativeTo="{hint}" position="before">
-				<mx:Spacer id="spacer1" height="30%"/>
+		<mx:State name="addLanguage">
+			<mx:RemoveChild target="{hbox3}"/>
+			<mx:AddChild relativeTo="{panel2}" position="lastChild">
+				<mx:HBox width="100%" verticalAlign="middle">
+					<mx:Spacer width="{ident_1}"/>
+					<mx:Label text="Language:"/>
+					<mx:ComboBox height="20"></mx:ComboBox>
+					<mx:LinkButton label="add"/>
+				</mx:HBox>
 			</mx:AddChild>
 		</mx:State>
 	</mx:states>
-	
+
 	<mx:Fade id="myFade"/> 
+	
+	<mx:ViewStack id="vs" width="100%" height="100%">
+	<mx:Canvas id="lngView" width="100%" height="100%">
+		<mx:Panel title="Language select" paddingLeft="10" paddingRight="10" paddingBottom="10" paddingTop="10"
+			width="400" height="300" layout="vertical" horizontalCenter="0" verticalCenter="0">
+			<mx:TextArea width="100%" borderStyle="none" editable="false" height="100"
+				text="To continue you must choose at least one language to use. It will be the first native supported object language. Not the interface language!"/>
+			<mx:HBox horizontalAlign="center" width="100%">
+				<mx:ComboBox id="nativeLanguageComboBox" dataProvider="{langsSource.language}" labelField="@text" height="20" width="200"/>
+				<mx:Button height="20" label="OK" click="{checkForLanguageSelection();}"/>
+			</mx:HBox>
+		</mx:Panel>
+	</mx:Canvas>
+	
+	<mx:Canvas id="mainView" width="100%" height="100%">
     <mx:Panel id="mainForm" title="V.D.O.M. Object IDE" paddingTop="0" paddingBottom="0" paddingLeft="0"
     	paddingRight="0" width="100%" height="100%" hideEffect="myFade" borderStyle="none"
     	backgroundColor="#c0c0c0" cornerRadius="0" minHeight="550" minWidth="700">
@@ -59,14 +67,14 @@
 						width="50%" height="100%" dropShadowEnabled="false" alpha="1.0" borderStyle="solid" borderThickness="1"
 						borderColor="#c0c0c0" creationComplete="{createInformationLangsTabs();}">
 							
-						<mx:HBox width="100%">
+						<mx:HBox width="100%" verticalAlign="middle">
 							<!-- Object Name -->
 							<mx:Label id="onameLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'oname')}" width="{ident_1}"
 								toolTip="You must define an Object Name"/>
 							<mx:TextArea width="100%" height="20" cornerRadius="3"/>
 						</mx:HBox>
 						
-						<mx:HBox width="100%">
+						<mx:HBox width="100%" verticalAlign="middle">
 							<!-- ID -->
 							<mx:Label id="idLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'id')}" width="{ident_1}"
 								toolTip="Unique identifier of this attribute, this identifier is an extension of the object identifier it use the base and a numerical value unique"/>
@@ -76,22 +84,16 @@
 						<mx:HBox width="100%" verticalAlign="bottom">
 							<!-- Display Name (Multilanguage) -->
 							<mx:Label id="dnameLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'dname')}" width="{ident_1}"/>
-							<mx:TabNavigator id="infoDnameTabs" width="100%" tabHeight="16" borderStyle="none" paddingTop="1">
-								<!--
-								<mx:Canvas label="EN" width="100%" height="100%">
-									<mx:TextArea width="100%" height="20"/>
-								</mx:Canvas>
-								-->
-							</mx:TabNavigator>
+							<mx:TabNavigator id="infoDnameTabs" width="100%" tabHeight="16" borderStyle="none" paddingTop="1"/>
 						</mx:HBox>
 						
 						<mx:HRule width="100%" height="1"/>
 						
-						<mx:HBox width="100%">
+						<mx:HBox width="100%" >
 							<!-- Icon -->
 							<mx:Label id="iconLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'icon')}" width="{ident_1}"/>
 							<mx:Image width="64" height="64" autoLoad="true" scaleContent="true"  source="@Embed(source='splash.png')"/>
-							<mx:Button id="browseButton1" label="{langData.language.(@id == langStr).sentence.(@label == 'browse')}"/>
+							<mx:Button id="browseButton1" label="{langData.language.(@id == langStr).sentence.(@label == 'browse')}" height="20"/>
 						</mx:HBox>
 						
 						<mx:HRule width="100%" height="1"/>
@@ -100,7 +102,7 @@
 							<!-- Editor Icon -->
 							<mx:Label id="eiconLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'eicon')}" width="{ident_1}"/>
 							<mx:Image width="64" height="64" scaleContent="true" autoLoad="true" source="@Embed(source='splash.png')"/>
-							<mx:Button id="browseButton2" label="{langData.language.(@id == langStr).sentence.(@label == 'browse')}"/>
+							<mx:Button id="browseButton2" label="{langData.language.(@id == langStr).sentence.(@label == 'browse')}" height="20"/>
 						</mx:HBox>
 						
 						<mx:HRule width="100%" height="1"/>
@@ -109,7 +111,7 @@
 							<!-- Structure Icon -->
 							<mx:Label id="siconLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'sicon')}" width="{ident_1}"/>
 							<mx:Image width="64" height="64" scaleContent="true" autoLoad="true" source="@Embed(source='splash.png')"/>
-							<mx:Button id="browseButton3" label="{langData.language.(@id == langStr).sentence.(@label == 'browse')}"/>
+							<mx:Button id="browseButton3" label="{langData.language.(@id == langStr).sentence.(@label == 'browse')}" height="20"/>
 						</mx:HBox>
 
 						<mx:HRule width="100%" height="1"/>
@@ -117,25 +119,19 @@
 						<mx:HBox width="100%" verticalAlign="middle">
 							<!-- Description (Multilanguage)-->
 							<mx:Label id="descLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'descript')}" width="{ident_1}"/>
-							<mx:TabNavigator id="infoDescriptTabs" width="100%" tabHeight="16" borderStyle="none" paddingTop="1">
-								<!--
-								<mx:Canvas label="EN" width="100%" height="100%">
-								<mx:TextArea id="desc1" width="100%" height="60"/>	
-								</mx:Canvas>
-								-->
-							</mx:TabNavigator>
+							<mx:TabNavigator id="infoDescriptTabs" width="100%" tabHeight="16" borderStyle="none" paddingTop="1"/>
 						</mx:HBox>
 						
 					</mx:Panel>
          
 					<mx:Panel width="50%" height="100%"  dropShadowEnabled="false" alpha="1.0" borderStyle="solid" borderThickness="1"
-						borderColor="#c0c0c0">
+						borderColor="#c0c0c0" id="panel2">
 					
 						<mx:CheckBox id="mvChkBox" label="{langData.language.(@id == langStr).sentence.(@label == 'moveable')}"/>
 						
 						<mx:CheckBox id="dynamicChkBox" label="{langData.language.(@id == langStr).sentence.(@label == 'dynamic')}"/>
 						
-						<mx:HBox width="100%">
+						<mx:HBox width="100%" verticalAlign="middle">
 							<mx:Label id="categoryLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'category')}" width="{ident_1}"/>
 							<mx:ComboBox id="ctgrsComboBox" width="200">
 								<mx:dataProvider>
@@ -147,7 +143,7 @@
 							</mx:ComboBox>
 						</mx:HBox>
 						
-						<mx:HBox width="100%">
+						<mx:HBox width="100%" verticalAlign="middle">
 							<mx:Label id="itypeLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'itype')}" width="{ident_1}"/>
 							<mx:ComboBox id="itypeComboBox" width="200">
 								<mx:dataProvider>
@@ -160,28 +156,28 @@
 							</mx:ComboBox>
 						</mx:HBox>
 						
-						<mx:HBox width="100%">
+						<mx:HBox width="100%" verticalAlign="middle">
 							<mx:Label id="verLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'version')}" width="{ident_1}"/>
 							<mx:TextArea width="100%" height="20" cornerRadius="3"/>
 						</mx:HBox>
 						
-						<mx:HBox width="100%">
+						<mx:HBox width="100%" verticalAlign="middle">
 							<mx:Label id="opriorLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'optimprior')}" width="{ident_1}"/>
 							<mx:TextArea width="100%" height="20" cornerRadius="3"/>
 						</mx:HBox>
 						
-						<mx:HBox width="100%">
+						<mx:HBox width="100%" verticalAlign="middle">
 							<mx:Label id="cntnrsLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'containers')}" width="{ident_1}"/>
 							<mx:TextArea width="100%" height="20" cornerRadius="3"/>
 						</mx:HBox>
 						
-						<mx:HBox width="100%">
+						<mx:HBox width="100%" verticalAlign="middle">
 							<mx:Label id="lngsLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'languages')}" width="{ident_1}"/>
 							<mx:TextArea width="100%" height="20" cornerRadius="3" editable="false"/>
 						</mx:HBox>
-						<mx:HBox width="100%">
+						<mx:HBox width="100%" id="hbox3" verticalAlign="middle">
 							<mx:Spacer width="{ident_1}"/>
-							<mx:LinkButton label="add" height="20"/>
+							<mx:LinkButton label="add" height="20" click="{currentState = 'addLanguage';}"/>
 							<mx:LinkButton label="remove" height="20"/>
 						</mx:HBox>
 					</mx:Panel>
@@ -210,13 +206,7 @@
 						
 						<mx:HBox width="100%" verticalAlign="bottom">
 							<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'dname')}" width="{ident_2}" alpha="1.0"/>
-							<mx:TabNavigator id="attrDnameTabs" width="100%" tabHeight="16" borderStyle="none" paddingTop="1">
-								<!--
-								<mx:Canvas label="EN" width="100%" height="100%">
-									<mx:TextArea width="100%" height="20"/>
-								</mx:Canvas>
-								-->
-							</mx:TabNavigator>
+							<mx:TabNavigator id="attrDnameTabs" width="100%" tabHeight="16" borderStyle="none" paddingTop="1"/>
 						</mx:HBox>
 						
 						<mx:HBox width="100%">
@@ -232,13 +222,7 @@
 						
 						<mx:HBox width="100%" verticalAlign="bottom">
 							<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'errvldmess')}" width="{ident_2}"/>
-							<mx:TabNavigator id="attrErrmsgTabs" width="100%" tabHeight="16" borderStyle="none" paddingTop="1">
-								<!--
-								<mx:Canvas label="EN" width="100%" height="100%">
-									<mx:TextArea width="100%" height="20"/>
-								</mx:Canvas>
-								-->
-							</mx:TabNavigator>						
+							<mx:TabNavigator id="attrErrmsgTabs" width="100%" tabHeight="16" borderStyle="none" paddingTop="1"/>
 						</mx:HBox>
 						
 	 					<mx:CheckBox id="visinedChBox" label="{langData.language.(@id == langStr).sentence.(@label == 'visined')}"/>
@@ -276,16 +260,9 @@
 						
 						<mx:HBox id="hbox1" width="100%" verticalAlign="middle">
 							<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'descript')}" width="{ident_2}"/>
-							<mx:TabNavigator id="attrDescriptTabs" width="100%" tabHeight="16" borderStyle="none" paddingTop="1">
-								<!--
-								<mx:Canvas label="EN" width="100%" height="100%">
-								<mx:TextArea width="100%" height="60"/>	
-								</mx:Canvas>
-								-->
-							</mx:TabNavigator>
+							<mx:TabNavigator id="attrDescriptTabs" width="100%" tabHeight="16" borderStyle="none" paddingTop="1"/>
 						</mx:HBox>
 						<mx:Button label="{langData.language.(@id == langStr).sentence.(@label == 'restore')}" click="attrFieldsRefresh();"/>
-						<mx:LinkButton label="test" click="{test();}"/>
 					</mx:Panel>
 				</mx:HBox>
             </mx:Canvas>
@@ -300,4 +277,6 @@
         </mx:TabNavigator>
         <mx:Label id="hint" text="V.D.O.M. next generation v2.0"/>
     </mx:Panel>
+	</mx:Canvas>
+	</mx:ViewStack>
 </mx:Application>
