--- a/IDE/Object_Editor/vdom.mxml
+++ b/IDE/Object_Editor/vdom.mxml
@@ -26,8 +26,8 @@
 				<mx:HBox width="100%" verticalAlign="middle">
 					<mx:Spacer width="{ident_1}"/>
 					<mx:Label text="Language:"/>
-					<mx:ComboBox height="20"></mx:ComboBox>
-					<mx:LinkButton label="add"/>
+					<mx:ComboBox width="200" id="addLanguageComboBox" dataProvider="{langsSource.language}" labelField="@text" height="20"></mx:ComboBox>
+					<mx:LinkButton label="add" click="{addSupLanguage();}"/>
 				</mx:HBox>
 			</mx:AddChild>
 		</mx:State>
@@ -71,7 +71,7 @@
 							<!-- Object Name -->
 							<mx:Label id="onameLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'oname')}" width="{ident_1}"
 								toolTip="You must define an Object Name"/>
-							<mx:TextArea width="100%" height="20" cornerRadius="3"/>
+							<mx:TextArea id="onameTextArea" width="100%" height="20" cornerRadius="3"/>
 						</mx:HBox>
 						
 						<mx:HBox width="100%" verticalAlign="middle">
@@ -135,10 +135,10 @@
 							<mx:Label id="categoryLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'category')}" width="{ident_1}"/>
 							<mx:ComboBox id="ctgrsComboBox" width="200">
 								<mx:dataProvider>
-								<mx:Object label="{langData.language.(@id == langStr).sentence.(@label == 'standart')}" data=""/>
-								<mx:Object label="{langData.language.(@id == langStr).sentence.(@label == 'advanced')}" data=""/>
-								<mx:Object label="{langData.language.(@id == langStr).sentence.(@label == 'usual')}" data=""/>
-								<mx:Object label="{langData.language.(@id == langStr).sentence.(@label == 'portal')}" data=""/>
+								<mx:Object label="{langData.language.(@id == langStr).sentence.(@label == 'standart')}" data="standart"/>
+								<mx:Object label="{langData.language.(@id == langStr).sentence.(@label == 'advanced')}" data="advanced"/>
+								<mx:Object label="{langData.language.(@id == langStr).sentence.(@label == 'usual')}" data="usual"/>
+								<mx:Object label="{langData.language.(@id == langStr).sentence.(@label == 'portal')}" data="portal"/>
 								</mx:dataProvider>
 							</mx:ComboBox>
 						</mx:HBox>
@@ -168,12 +168,12 @@
 						
 						<mx:HBox width="100%" verticalAlign="middle">
 							<mx:Label id="cntnrsLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'containers')}" width="{ident_1}"/>
-							<mx:TextArea width="100%" height="20" cornerRadius="3"/>
+							<mx:TextArea id="containersTextArea" width="100%" height="20" cornerRadius="3"/>
 						</mx:HBox>
 						
 						<mx:HBox width="100%" verticalAlign="middle">
 							<mx:Label id="lngsLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'languages')}" width="{ident_1}"/>
-							<mx:TextArea width="100%" height="20" cornerRadius="3" editable="false"/>
+							<mx:TextArea id="supLangsTextArea" width="100%" height="20" cornerRadius="3" editable="false" creationComplete="{supLangsTextArea.text = supLanguages.language.@label;}"/>
 						</mx:HBox>
 						<mx:HBox width="100%" id="hbox3" verticalAlign="middle">
 							<mx:Spacer width="{ident_1}"/>
@@ -196,8 +196,8 @@
 					</mx:VBox>
 					
 					<mx:Panel title="{langData.language.(@id == langStr).sentence.(@label == 'attrprop')}" width="100%" height="100%"
-						dropShadowEnabled="false" alpha="1.0" borderStyle="solid" borderThickness="1" borderColor="#c0c0c0" id="panel1"
-						creationComplete="{panel1.visible = false; createAttrLangsTabs();}">
+						dropShadowEnabled="false" alpha="1.0" borderStyle="solid" borderThickness="1" borderColor="#c0c0c0" id="attributesPanel"
+						creationComplete="{attributesPanel.visible = false; createAttrLangsTabs();}">
 						
 						<mx:HBox width="100%" id="hbox2">
 							<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'name')}" width="{ident_2}"/>
@@ -273,6 +273,9 @@
 			<mx:Canvas label="SourceCode" width="100%" height="100%">
 			</mx:Canvas>
 			<mx:Canvas label="Libraries" width="100%" height="330">
+			</mx:Canvas>
+			<mx:Canvas label="Target XML" width="100%" height="100%" show="{buildObjectXML();}">
+				<mx:TextArea id="targetXMLTextArea" width="100%" height="100%" verticalScrollPolicy="auto" horizontalScrollPolicy="auto"/>
 			</mx:Canvas>
         </mx:TabNavigator>
         <mx:Label id="hint" text="V.D.O.M. next generation v2.0"/>
