--- a/IDE/LoadObjects/LoadObjects.mxml
+++ b/IDE/LoadObjects/LoadObjects.mxml
@@ -6,61 +6,78 @@
 			import mx.controls.Alert;
 			import com.example.programmingas3.fileio.FileUpload;
 
-		private var mySOAP:Soap;
+		private var soap:Soap = Soap.getInstance(); 
+		
+		private var num:Number = 0;
 					
 		private function init():void{
 	//		Alert.show("Привет!");
-		 	Soap.init();
+		// 	Soap.init();
 		}
 	
 		private function set_ses():void{
-			Soap.login('login Name', '777');
+	//	for(var i:int = 0; i <4; i++)
+			soap.login('login Name', '777');
+			soap.addEventListener('loginLoadComplete', loginLoadCompleteHandler);
+		}
+		
+		private function loginLoadCompleteHandler(event:Event):void{
+		//	Alert.show('!!! Ура Я работаю!!!');
+		num++;
+		textArea.text += num+': '+ soap.getCreateApplicationData()+ '\n';
+		
 		}
 		private function close_session():void{
 			//Alert.show("Закрываем сессию");
-			Soap.closeSession();
+			soap.closeSession();
 		}
 		private function create_application():void{
-			Soap.createApplication();
+			num = 0;
+			for(var i:int = 0; i <100; i++)
+			soap.createApplication();
 //			Alert.show("Привет!");
 		}
 		private function set_application():void{
-			for(var i:uint =0; i< 10; i++)
-			Soap.setApplicationInfo();
+		//	for(var i:uint =0; i< 10; i++)
+			soap.setApplicationInfo();
 
 //			Alert.show("Привет!");
 		}
 		private function all_applications():void{
-			Soap.getType()
+			soap.getType()
 //			Alert.show("Привет!");
 		}
 		private function all_types():void{
-			Soap.getApplicationResource();
+			soap.getApplicationResource();
 //			Alert.show("Привет!");
+		}
+		private function aboutt():void{
+			soap.getEcho();
+			
 		}
 			
 		]]>
 	</mx:Script>
 	<example:FileUpload id="fileUpload" creationComplete="fileUpload.init(uploadProgress, cancelUpload);" />
 	<mx:Panel x="10" y="10" width="644" height="318" layout="absolute">
-		<mx:Button x="298" y="10" label="Установка сесси" click="set_ses()"/>
-		<mx:Button x="298" y="40" label="close session " width="121" click="close_session()"/>
-		<mx:Button x="298" y="70" label="create application" width="121" click="create_application()"/>
-		<mx:Button x="298" y="100" label="set application" width="121" click="set_application()"/>
-		<mx:Button x="298" y="130" label=" all applications" width="121" click="all_applications()"/>
-		<mx:Button x="298" y="160" label="all types" width="121" click="all_types()"/>
-		<mx:TextArea id="textArea" x="10" y="27" height="241" width="271"/>
+		<mx:Button x="331" y="10" label="Установка сесси" click="set_ses()"/>
+		<mx:Button x="331" y="40" label="close session " width="121" click="close_session()"/>
+		<mx:Button x="331" y="70" label="create application" width="121" click="create_application()"/>
+		<mx:Button x="331" y="100" label="set application" width="121" click="set_application()"/>
+		<mx:Button x="331" y="130" label=" all applications" width="121" click="all_applications()"/>
+		<mx:Button x="331" y="160" label="all types" width="121" click="all_types()"/>
+		<mx:TextArea id="textArea" x="10" y="27" height="223" width="304"/>
 		<mx:Label x="10" y="1" text="Trace:" fontWeight="Upload"  click="fileUpload.startUpload();"/>
-		<mx:Button x="444" y="10" label="render object to xml"/>
-		<mx:Button x="444" y="40" label="create object"/>
-		<mx:Button x="444" y="70" label="get application top-level "/>
-		<mx:Button x="444" y="100" label="get object's child objects"/>
-		<mx:Button x="444" y="130" label="get application language"/>
-		<mx:Button x="444" y="160" label="set object attribute value"/>
+		<mx:Button x="454" y="10" label="about" id="about" click="aboutt()"/>
+		<mx:Button x="454" y="40" label="create object"/>
+		<mx:Button x="454" y="70" label="get application top-level "/>
+		<mx:Button x="454" y="100" label="get object's child objects"/>
+		<mx:Button x="454" y="130" label="get application language"/>
+		<mx:Button x="454" y="160" label="set object attribute value"/>
 		
-		<mx:ProgressBar id="uploadProgress" label="" mode="manual"  x="289" y="220"/>
-		<mx:Button id="cancelUpload" label="Cancel" click="fileUpload.cancelUpload();" enabled="false"  x="374" y="190"/>
-		<mx:Button id="startUpload" label="Upload..." click="fileUpload.startUpload();"  x="289" y="190"/>
+		<mx:ProgressBar id="uploadProgress" label="" mode="manual"  x="322" y="220"/>
+		<mx:Button id="cancelUpload" label="Cancel" click="fileUpload.cancelUpload();" enabled="false"  x="407" y="190"/>
+		<mx:Button id="startUpload" label="Upload..." click="fileUpload.startUpload();"  x="322" y="190"/>
 	</mx:Panel>
 	
 </mx:Application>
