--- a/IDE/Object_Editor/vdom.mxml
+++ b/IDE/Object_Editor/vdom.mxml
@@ -7,7 +7,10 @@
 	<mx:XML id="langData" source="langs/translation.xml" />
 	<mx:XML id="langsSource" source="langs/languages.xml" />
 	<mx:Script source="main.as" />
-	
+	<mx:Fade id="myFade"/>
+	<mx:Image id="defaultImage" source="@Embed(source='splash.png')" visible="false"/> <!-- Dafault icons Image -->
+	<mx:Image id="waitingImage" source="@Embed(source='waiting.swf')" visible="false"/> <!-- Dafault icons Image -->
+
 	<mx:states>
 		<mx:State name="editorParams">
 			<mx:AddChild relativeTo="{hbox1}" position="before">
@@ -17,6 +20,15 @@
 					<mx:TextArea height="20" width="100%" cornerRadius="3"/>
 					<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'info')}:"/>
 					<mx:TextArea height="20" width="100%" cornerRadius="3"/>
+				</mx:HBox>
+			</mx:AddChild>
+		</mx:State>
+		<mx:State name="textFieldParams">
+			<mx:AddChild relativeTo="{hbox1}" position="before">
+				<mx:HBox width="100%">
+					<mx:Spacer width="{ident_2}"/>
+					<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'length')}:"/>
+					<mx:TextArea height="20" width="200" cornerRadius="3"/>
 				</mx:HBox>
 			</mx:AddChild>
 		</mx:State>
@@ -46,9 +58,7 @@
 		</mx:State>
 	</mx:states>
 
-	<mx:Fade id="myFade"/>
-	
-	
+
 	<mx:ViewStack id="vs" width="100%" height="100%">
 	<mx:Canvas id="lngView" width="100%" height="100%">
 		<mx:Panel title="Language select" paddingLeft="10" paddingRight="10" paddingBottom="10" paddingTop="10"
@@ -63,8 +73,8 @@
 	</mx:Canvas>
 	
 	<mx:Canvas id="mainView" width="100%" height="100%">
-    <mx:Panel id="mainForm" title="V.D.O.M. Object IDE" paddingTop="0" paddingBottom="0" paddingLeft="0"
-    	paddingRight="0" width="100%" height="100%" hideEffect="myFade" borderStyle="none"
+    <mx:Panel id="mainForm" title="V.D.O.M. Object IDE" paddingTop="0" paddingBottom="0" paddingLeft="0" paddingRight="0"
+    	width="100%" height="100%" hideEffect="myFade" borderStyle="none"
     	backgroundColor="#c0c0c0" cornerRadius="0" minHeight="550" minWidth="700">
     	
         <mx:MenuBar labelField="@label" itemClick="menuHandler(event)" dataProvider="{menuBarCollection}" width="100%"/>
@@ -72,11 +82,10 @@
         <mx:TabNavigator width="100%" height="100%" paddingTop="10" paddingLeft="10" paddingRight="10" paddingBottom="10" id="tabnavigator1">
         
 			<!-- Information tab -->
-			<mx:Canvas id="infoTab" label="{langData.language.(@id == langStr).sentence.(@label == 'information')}" width="100%"
-				height="100%">
+			<mx:Canvas id="infoTab" label="{langData.language.(@id == langStr).sentence.(@label == 'information')}" width="100%" height="100%">
 			
 				<!-- Basic Preference panels -->
-				<mx:HBox direction="horizontal" width="100%" height="100%" x="0">
+				<mx:HBox direction="horizontal" width="100%" height="100%">
 					<mx:Panel id="bpPanel" title="{langData.language.(@id == langStr).sentence.(@label == 'bscpref')}"
 						width="50%" height="100%" dropShadowEnabled="false" alpha="1.0" borderStyle="solid" borderThickness="1"
 						borderColor="#c0c0c0" creationComplete="{createInformationLangsTabs();}">
@@ -84,14 +93,14 @@
 						<mx:HBox width="100%" verticalAlign="middle">
 							<!-- Object Name -->
 							<mx:Label id="onameLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'oname')}" width="{ident_1}"
-								toolTip="You must define an Object Name"/>
+								toolTip="{langData.language.(@id == langStr).sentence.(@id == 63)}"/>
 							<mx:TextArea id="onameTextArea" width="100%" height="20" cornerRadius="3"/>
 						</mx:HBox>
 						
 						<mx:HBox width="100%" verticalAlign="middle">
 							<!-- ID -->
 							<mx:Label id="idLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'id')}" width="{ident_1}"
-								toolTip="Unique identifier of this attribute, this identifier is an extension of the object identifier it use the base and a numerical value unique"/>
+								toolTip="{langData.language.(@id == langStr).sentence.(@id == 64)}"/>
 							<mx:TextArea id="idTextArea" width="100%" height="20" editable="false" cornerRadius="3"/>
 						</mx:HBox>
 						
@@ -106,8 +115,10 @@
 						<mx:HBox width="100%" >
 							<!-- Icon -->
 							<mx:Label id="iconLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'icon')}" width="{ident_1}"/>
-							<mx:Image width="64" height="64" autoLoad="true" scaleContent="true"  source="@Embed(source='splash.png')"/>
-							<mx:Button id="browseButton1" label="{langData.language.(@id == langStr).sentence.(@label == 'browse')}" height="20"/>
+							<mx:Image id="iconImageBox" width="64" height="64" autoLoad="true" scaleContent="true" source=""
+								creationComplete="{iconImage.source = defaultImage.source; iconImageBox.source = iconImage.source}"/>
+							<mx:Button id="browseButton1" label="{langData.language.(@id == langStr).sentence.(@label == 'browse')}" height="20"
+								click="{processIconData(event);}"/>
 						</mx:HBox>
 						
 						<mx:HRule width="100%" height="1"/>
@@ -115,8 +126,10 @@
 						<mx:HBox width="100%">
 							<!-- Editor Icon -->
 							<mx:Label id="eiconLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'eicon')}" width="{ident_1}"/>
-							<mx:Image width="64" height="64" scaleContent="true" autoLoad="true" source="@Embed(source='splash.png')"/>
-							<mx:Button id="browseButton2" label="{langData.language.(@id == langStr).sentence.(@label == 'browse')}" height="20"/>
+							<mx:Image id="editorIconImageBox" width="64" height="64" scaleContent="true" autoLoad="true" source=""
+								creationComplete="{editorIconImage.source = defaultImage.source; editorIconImageBox.source = editorIconImage.source}"/>
+							<mx:Button id="browseButton2" label="{langData.language.(@id == langStr).sentence.(@label == 'browse')}" height="20"
+								click="{processEditorIconData(event);}"/>
 						</mx:HBox>
 						
 						<mx:HRule width="100%" height="1"/>
@@ -124,8 +137,10 @@
 						<mx:HBox width="100%">
 							<!-- Structure Icon -->
 							<mx:Label id="siconLabel" text="{langData.language.(@id == langStr).sentence.(@label == 'sicon')}" width="{ident_1}"/>
-							<mx:Image width="64" height="64" scaleContent="true" autoLoad="true" source="@Embed(source='splash.png')"/>
-							<mx:Button id="browseButton3" label="{langData.language.(@id == langStr).sentence.(@label == 'browse')}" height="20"/>
+							<mx:Image id="structureIconImageBox" width="64" height="64" scaleContent="true" autoLoad="true" source=""
+								creationComplete="{structureIconImage.source = defaultImage.source; structureIconImageBox.source = structureIconImage.source;}"/>
+							<mx:Button id="browseButton3" label="{langData.language.(@id == langStr).sentence.(@label == 'browse')}" height="20"
+								click="{processStructureIconData(event);}"/>
 						</mx:HBox>
 
 						<mx:HRule width="100%" height="1"/>
@@ -200,11 +215,12 @@
 				</mx:HBox>
             </mx:Canvas>
             
-			<mx:Canvas label="{langData.language.(@id == langStr).sentence.(@label == 'attributes')}" width="100%" height="100%"  hide="{attrFieldsWrite();}">
+			<mx:Canvas label="{langData.language.(@id == langStr).sentence.(@label == 'attributes')}" width="100%" height="100%"
+				hide="{attrFieldsWrite();}" show="{attributesPanel.visible = false;}">
 				<mx:HBox width="100%" height="100%">
 				
 					<mx:VBox width="200" height="100%">
-						<mx:List id="attrList" width="100%" height="100%" labelField="@label"
+						<mx:List id="attrList" width="100%" height="100%" labelField="@label" click="{if (currentAttr != -1) attrFieldsWriteNRefresh();}"
 							dataProvider="{attributesCollection}" change="{attrFieldsWriteNRefresh();}"/>
 							
 						<mx:Button label="{langData.language.(@id == langStr).sentence.(@label == 'addnewattr')}" width="100%" click="{addNewAttribute();}"/>
@@ -217,11 +233,11 @@
 					<mx:ViewStack id="attributePropVS" width="100%" height="100%">
 					<mx:Panel title="{langData.language.(@id == langStr).sentence.(@label == 'attrprop')}" width="100%" height="100%"
 						dropShadowEnabled="false" alpha="1.0" borderStyle="solid" borderThickness="1" borderColor="#c0c0c0" id="attributesPanel"
-						creationComplete="{attributesPanel.visible = false; createAttrLangsTabs();}">
+						creationComplete="{createAttrLangsTabs(); attrFieldsRefresh(); attrList.selectedIndex = 0;}">
 						
 						<mx:HBox width="100%" id="hbox2">
 							<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'name')}" width="{ident_2}"/>
-							<mx:TextArea id="attrName" height="20" width="100%" cornerRadius="3"/>
+							<mx:TextArea id="attrName" height="20" width="100%" cornerRadius="3" change="{attrFieldsWrite();}"/>
 						</mx:HBox>
 						
 						<mx:HBox width="100%" verticalAlign="bottom">
@@ -277,7 +293,7 @@
 							<mx:Button id="codeButton" label="{langData.language.(@id == langStr).sentence.(@label == 'ocinterface')}"
 								creationComplete="{codeButton.enabled = false;}"
 								click="{attributePropVS.selectedChild = attrCodeInterfacePanel; attrCodeInterfacePanel.visible = true;}"
-								toolTip="Opens an XML Code Editor. To use Code Interface you must change Interface Type to [Extended]"/>
+								toolTip="{langData.language.(@id == langStr).sentence.(@id == 72)}"/>
 								
 						</mx:HBox>
 						
@@ -285,18 +301,25 @@
 							<mx:Label text="{langData.language.(@id == langStr).sentence.(@label == 'descript')}" width="{ident_2}"/>
 							<mx:TabNavigator id="attrDescriptTabs" width="100%" tabHeight="16" borderStyle="none" paddingTop="1"/>
 						</mx:HBox>
-						<mx:Button label="{langData.language.(@id == langStr).sentence.(@label == 'restore')}" click="attrFieldsRefresh();"/>
+						<mx:Button label="{langData.language.(@id == langStr).sentence.(@label == 'restore')}" click="{attrFieldsRefresh();}"/>
 					</mx:Panel>
 					<mx:Panel title="{langData.language.(@id == langStr).sentence.(@label == 'codeeditor')}" width="100%" height="100%"
-						dropShadowEnabled="false" alpha="1.0" borderStyle="solid" borderThickness="1" borderColor="#c0c0c0" id="attrCodeInterfacePanel"
-						creationComplete="{attrCodeInterfacePanel.visible = true;}">
+						dropShadowEnabled="false" alpha="1.0" borderStyle="solid" borderThickness="1" borderColor="#c0c0c0"
+						id="attrCodeInterfacePanel">
 						
 						<mx:VBox horizontalAlign="right" width="100%" height="100%">
 							<mx:HBox width="100%" height="100%">
-								<mx:TextArea width="50" height="100%" borderStyle="none" verticalScrollPolicy="off" textAlign="right" editable="false"/>
-								<mx:TextArea width="100%" height="100%"/>
+								<mx:TextArea id="attrCodeEditorNumbersArea" width="50" height="100%"
+									borderStyle="none" verticalScrollPolicy="off" textAlign="right" editable="false"
+									color="#666666"/>
+								<mx:TextArea id="attrCodeEditorTextArea" width="100%" height="100%"
+									focusOut="{checkTextAreaFocus();}" horizontalScrollPolicy="auto" wordWrap="false"
+									keyDown="{keyValidator(event);}" keyUp="{justDrawNumbers();}"
+									fontWeight="bold" click="{justDrawNumbers();}"
+									creationComplete="{attrCodeEditorTextArea.text = attributesCollection[currentAttr].codeinterface;}"/>
 							</mx:HBox>
-							<mx:Button label="{langData.language.(@id == langStr).sentence.(@label == 'back')}" click="{attributePropVS.selectedChild = attributesPanel;}"/>
+							<mx:Button label="{langData.language.(@id == langStr).sentence.(@label == 'back')}"
+								click="{attributePropVS.selectedChild = attributesPanel; attrCodeInterfacePanel.visible = false;}"/>
 						</mx:VBox>						
 					</mx:Panel>
 					</mx:ViewStack>
@@ -305,12 +328,8 @@
 					
 				</mx:HBox>
             </mx:Canvas>
-			<mx:Canvas label="WCAG" width="100%" height="100%">
-			</mx:Canvas>
-			<mx:Canvas label="SourceCode" width="100%" height="100%">
-			</mx:Canvas>
-			<mx:Canvas label="Libraries" width="100%" height="100%">
-			</mx:Canvas>
+			<mx:Canvas label="WCAG" width="100%" height="100%"/>
+			<mx:Canvas label="SourceCode" width="100%" height="100%"/>
 			<mx:Canvas label="Target XML" width="100%" height="100%" show="{buildObjectXML();}">
 				<mx:TextArea id="targetXMLTextArea" width="100%" height="100%" verticalScrollPolicy="auto" horizontalScrollPolicy="auto"/>
 			</mx:Canvas>
